// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Existing configs > 'acala.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": [
    "wss://acala-rpc.aca-api.network",
    "wss://acala-rpc.dwellir.com",
  ],
  "import-storage": {
    "EvmAccounts": {
      "Accounts": [
        [
          [
            "0x75E480dB528101a381Ce68544611C169Ad7EB342",
          ],
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        ],
      ],
      "EvmAddresses": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          "0x75E480dB528101a381Ce68544611C169Ad7EB342",
        ],
      ],
    },
    "GeneralCouncil": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "246gNkjCexYRsCpdjtVhz35sHjcb21jpqipzT9u4uwKV8iEE",
        "249LSvsEyxS4VpEJGg62yhYA7sHy1KcgGW6KzACBCLW1RsZF",
        "21y4X7QDByUjnu5KX9W1H5TbG2wTLPDbhYFHqc4v6Q1nTBnu",
        "265dERKLvMFwWWvtGNUjQBrHFTT88VcEtb5QYh2Zuj79UGMf",
        "21XH88Kd5vDLkrZMb4D2eYJAB9yKbycfkYBqAaD1wQQi1uJ8",
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
        [
          [
            "246gNkjCexYRsCpdjtVhz35sHjcb21jpqipzT9u4uwKV8iEE",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
        [
          [
            "249LSvsEyxS4VpEJGg62yhYA7sHy1KcgGW6KzACBCLW1RsZF",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
        [
          [
            "21y4X7QDByUjnu5KX9W1H5TbG2wTLPDbhYFHqc4v6Q1nTBnu",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
        [
          [
            "265dERKLvMFwWWvtGNUjQBrHFTT88VcEtb5QYh2Zuj79UGMf",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
        [
          [
            "21XH88Kd5vDLkrZMb4D2eYJAB9yKbycfkYBqAaD1wQQi1uJ8",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechnicalCommittee": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        "246gNkjCexYRsCpdjtVhz35sHjcb21jpqipzT9u4uwKV8iEE",
        "249LSvsEyxS4VpEJGg62yhYA7sHy1KcgGW6KzACBCLW1RsZF",
      ],
    },
    "Tokens": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "AUSD",
            },
          ],
          {
            "free": 1000000000000000,
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "DOT",
            },
          ],
          {
            "free": 1000000000000000,
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "LDOT",
            },
          ],
          {
            "free": 1000000000000000,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
  "runtime-log-level": 5,
}
`;

exports[`Existing configs > 'astar.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://astar.api.onfinality.io/public-ws",
  "import-storage": {
    "Assets": {
      "Account": [
        [
          [
            "340282366920938463463374607431768211455",
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 1000000000000000,
          },
        ],
        [
          [
            "4294969280",
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 100000000000,
          },
        ],
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'basilisk.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://basilisk-rpc.dwellir.com",
  "import-storage": {
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
    "Tokens": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            17,
          ],
          {
            "free": "100000000000000000000",
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'bifrost.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://bifrost-parachain.api.onfinality.io/public-ws",
  "import-storage": {
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'centrifuge.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://centrifuge-parachain.api.onfinality.io/public-ws/",
  "import-storage": {
    "Council": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "Elections": {
      "Members": [
        {
          "deposit": "10000000000000000000000",
          "stake": "10000000000000000000000",
          "who": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        },
      ],
    },
    "OrmlTokens": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "ForeignAsset": 6,
            },
          ],
          {
            "free": 1000000000000,
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "ForeignAsset": 4,
            },
          ],
          {
            "free": "1000000000000000000000",
          },
        ],
      ],
    },
    "Proxy": {
      "Proxies": [
        [
          [
            "4dTeMxuPJCK7zQGhFcgCivSJqBs9Wo2SuMSQeYCCuVJ9xrE2",
          ],
          [
            [
              {
                "delegate": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              },
              {
                "proxyType": "Any",
              },
              {
                "delay": 0,
              },
            ],
            "350000000000000000",
          ],
        ],
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "1000000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'composable-polkadot.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./composable.polkadot.db.sqlite",
  "endpoint": "wss://rpc.composable.finance",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'dev.yml' config parsing is correct 1`] = `
{
  "block": 1238000,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://karura-rpc.aca-staging.network/ws",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'hydradx.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./hydradx.db.sqlite",
  "endpoint": "wss://hydradx-rpc.dwellir.com",
  "import-storage": {
    "Council": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechnicalCommittee": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "Tokens": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            0,
          ],
          {
            "free": "10000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            1,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            2,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            3,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            4,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            5,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            6,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            7,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            8,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            9,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            10,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            11,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            12,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            13,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            14,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            15,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            16,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            17,
          ],
          {
            "free": "100000000000000000000000",
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'imbu.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://imbue-kusama.imbue.network",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'interlay.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./interlay.db.sqlite",
  "endpoint": "wss://rpc-interlay.luckyfriday.io/",
  "import-storage": {
    "Tokens": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "INTR",
            },
          ],
          {
            "free": "100000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "IBTC",
            },
          ],
          {
            "free": "100000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "IBTC",
            },
          ],
          {
            "free": "100000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "DOT",
            },
          ],
          {
            "free": "100000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "KINT",
            },
          ],
          {
            "free": "100000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "KBTC",
            },
          ],
          {
            "free": "100000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "KSM",
            },
          ],
          {
            "free": "100000000000000000000000000000",
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'kabocha.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": [
    "wss://kabocha.jelliedowl.net",
  ],
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
        [
          [
            "246gNkjCexYRsCpdjtVhz35sHjcb21jpqipzT9u4uwKV8iEE",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
          },
        ],
        [
          [
            "249LSvsEyxS4VpEJGg62yhYA7sHy1KcgGW6KzACBCLW1RsZF",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
          },
        ],
        [
          [
            "21y4X7QDByUjnu5KX9W1H5TbG2wTLPDbhYFHqc4v6Q1nTBnu",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
          },
        ],
        [
          [
            "265dERKLvMFwWWvtGNUjQBrHFTT88VcEtb5QYh2Zuj79UGMf",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
          },
        ],
        [
          [
            "21XH88Kd5vDLkrZMb4D2eYJAB9yKbycfkYBqAaD1wQQi1uJ8",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'karura.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://karura-rpc.aca-api.network",
  "import-storage": {
    "EvmAccounts": {
      "Accounts": [
        [
          [
            "0x75E480dB528101a381Ce68544611C169Ad7EB342",
          ],
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        ],
      ],
      "EvmAddresses": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          "0x75E480dB528101a381Ce68544611C169Ad7EB342",
        ],
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
    "Tokens": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "KUSD",
            },
          ],
          {
            "free": 1000000000000000,
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "KSM",
            },
          ],
          {
            "free": "10000000000000000000",
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
  "runtime-log-level": 5,
}
`;

exports[`Existing configs > 'khala.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./khala.db.sqlite",
  "endpoint": [
    "wss://khala-rpc.dwellir.com",
    "wss://khala.api.onfinality.io/public-ws",
  ],
  "import-storage": {
    "Council": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechnicalCommittee": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'kusama.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": [
    "wss://kusama-rpc.dwellir.com",
    "wss://rpc.ibp.network/kusama",
    "wss://kusama-rpc.polkadot.io",
  ],
  "import-storage": {
    "ParasDisputes": {
      "$removePrefix": [
        "disputes",
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "10000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
  "runtime-log-level": 5,
}
`;

exports[`Existing configs > 'kusama-asset-hub.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://kusama-asset-hub-rpc.polkadot.io",
  "import-storage": {
    "Assets": {
      "Account": [
        [
          [
            1984,
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 1000000000,
          },
        ],
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'kusama-bridge-hub.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://kusama-bridge-hub-rpc.polkadot.io",
  "import-storage": {
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'mandala.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://mandala-tc9-rpc.aca-staging.network",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
    "Tokens": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": "AUSD",
            },
          ],
          {
            "free": 1000000000000000,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'mandala-genesis.yml' config parsing is correct 1`] = `
{
  "build-block-mode": "Batch",
  "genesis": "https://raw.githubusercontent.com/AcalaNetwork/Acala/master/resources/mandala-dist.json",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "port": 8000,
}
`;

exports[`Existing configs > 'mangata.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./mangata.db.sqlite",
  "endpoint": "wss://kusama-archive.mangata.online",
  "import-storage": {
    "Council": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "Tokens": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 0,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 14,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 30,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 7,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 26,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 16,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 31,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 15,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 6,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 11,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 23,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            {
              "token": 4,
            },
          ],
          {
            "free": "1000000000000000000000000000000",
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
  "registered-types": {
    "types": {
      "Header": {
        "count": "BlockNumber",
        "digest": "Digest",
        "extrinsicsRoot": "Hash",
        "number": "Compact<BlockNumber>",
        "parentHash": "Hash",
        "seed": "ShufflingSeed",
        "stateRoot": "Hash",
      },
      "ShufflingSeed": {
        "proof": "H512",
        "seed": "H256",
      },
    },
  },
  "runtime-log-level": 5,
}
`;

exports[`Existing configs > 'manta.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://ws.manta.systems",
  "import-storage": {
    "Sudo": {
      "Key": "dfbMFtQXqiKHH4d2y4CFcVQCpopqKcaEiYv2DCUpVCphoz8kB",
    },
    "System": {
      "Account": [
        [
          [
            "dfbMFtQXqiKHH4d2y4CFcVQCpopqKcaEiYv2DCUpVCphoz8kB",
          ],
          {
            "data": {
              "free": "1000000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'moonbase-alpha.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://wss.api.moonbase.moonbeam.network",
  "import-storage": {
    "AuthorFilter": {
      "EligibleCount": 100,
      "EligibleRatio": 100,
    },
    "CouncilCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
    "Sudo": {
      "Key": "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
    },
    "System": {
      "Account": [
        [
          [
            "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechCommitteeCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
    "TreasuryCouncilCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'moonbeam.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://wss.api.moonbeam.network",
  "import-storage": {
    "AuthorFilter": {
      "EligibleCount": 100,
      "EligibleRatio": 100,
    },
    "CouncilCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
    "System": {
      "Account": [
        [
          [
            "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechCommitteeCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
    "TreasuryCouncilCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'moonriver.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://wss.moonriver.moonbeam.network",
  "import-storage": {
    "AuthorFilter": {
      "EligibleCount": 100,
      "EligibleRatio": 100,
    },
    "CouncilCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
    "System": {
      "Account": [
        [
          [
            "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechCommitteeCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
    "TreasuryCouncilCollective": {
      "Members": [
        "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'nodle-eden.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://nodle-parachain.api.onfinality.io/public-ws",
  "import-storage": {
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "10000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechnicalCommittee": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "TechnicalMembership": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'phala.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./phala.db.sqlite",
  "endpoint": [
    "wss://phala-rpc.dwellir.com",
    "wss://phala.api.onfinality.io/public-ws",
  ],
  "import-storage": {
    "Council": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechnicalCommittee": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'picasso-kusama.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./picasso.kusama.db.sqlite",
  "endpoint": "wss://rpc.composablenodes.tech",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'picasso-rococo.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./picasso.rococo.db.sqlite",
  "endpoint": "wss://picasso-rococo-rpc-lb.composablenodes.tech",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'polkadex.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://parachain.polkadex.trade",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'polkadot.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": [
    "wss://rpc.ibp.network/polkadot",
    "wss://polkadot-rpc.dwellir.com",
  ],
  "import-storage": {
    "ParasDisputes": {
      "$removePrefix": [
        "disputes",
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "10000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'polkadot-asset-hub.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://polkadot-asset-hub-rpc.polkadot.io",
  "import-storage": {
    "Assets": {
      "Account": [
        [
          [
            1984,
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 1000000000,
          },
        ],
        [
          [
            21,
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 1000000000,
          },
        ],
      ],
      "Asset": [
        [
          [
            21,
          ],
          {
            "supply": 1000000000,
          },
        ],
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'polkadot-bridge-hub.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://polkadot-bridge-hub-rpc.polkadot.io",
  "import-storage": {
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'polkadot-collectives.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://polkadot-collectives-rpc.polkadot.io",
  "import-storage": {
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "10000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'quartz.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://ws-quartz.unique.network",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "1000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
  "runtime-log-level": 5,
}
`;

exports[`Existing configs > 'rococo.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://rococo-rpc.polkadot.io",
  "import-storage": {
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "10000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'shibuya.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://shibuya-rpc.dwellir.com",
  "import-storage": {
    "Assets": {
      "Account": [
        [
          [
            "340282366920938463463374607431768211455",
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": "100000000000000000",
          },
        ],
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'shiden.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://shiden.api.onfinality.io/public-ws",
  "import-storage": {
    "Assets": {
      "Account": [
        [
          [
            "340282366920938463463374607431768211455",
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": "100000000000000000",
          },
        ],
        [
          [
            "4294969280",
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 100000000000,
          },
        ],
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'statemine.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://statemine-rpc.dwellir.com",
  "import-storage": {
    "Assets": {
      "Account": [
        [
          [
            1984,
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 1000000000,
          },
        ],
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'statemint.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://statemint-rpc.dwellir.com",
  "import-storage": {
    "Assets": {
      "Account": [
        [
          [
            1984,
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 1000000000,
          },
        ],
        [
          [
            21,
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": 1000000000,
          },
        ],
      ],
      "Asset": [
        [
          [
            21,
          ],
          {
            "supply": 1000000000,
          },
        ],
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'tanssi.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://fraa-dancebox-3001-rpc.a.dancebox.tanssi.network",
  "import-storage": {
    "Sudo": {
      "Key": "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
    },
    "System": {
      "Account": [
        [
          [
            "0xf24FF3a9CF04c71Dbc94D0b566f7A27B94566cac",
          ],
          {
            "data": {
              "free": "10000000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'tinkernet.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./tinkernet.db.sqlite",
  "endpoint": "wss://tinkernet-rpc.dwellir.com",
  "import-storage": {
    "CoreAssets": {
      "Accounts": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            1,
          ],
          {
            "free": "100000000000000000000",
          },
        ],
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": 1000000000000000,
            },
            "providers": 1,
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'watr-rococo.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./db.sqlite",
  "endpoint": "wss://rpc.dev.watr.org",
  "import-storage": {
    "Assets": {
      "Account": [
        [
          [
            2018,
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "balance": "1000000000000000000",
          },
        ],
      ],
      "Asset": [
        [
          [
            2018,
          ],
          {
            "admin": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "issuer": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "owner": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
            "supply": "2000000000000000000",
          },
        ],
      ],
    },
    "Council": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "Sudo": {
      "Key": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
          },
        ],
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;

exports[`Existing configs > 'zeitgeist.yml' config parsing is correct 1`] = `
{
  "block": null,
  "build-block-mode": "Batch",
  "db": "./tmp/db_mba.sqlite",
  "endpoint": [
    "wss://main.rpc.zeitgeist.pm/ws",
    "wss://zeitgeist-rpc.dwellir.com",
    "wss://zeitgeist.api.onfinality.io/public-ws",
  ],
  "import-storage": {
    "AdvisoryCommittee": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "AdvisoryCommitteeMembership": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "AuthorFilter": {
      "EligibleCount": 100,
      "EligibleRatio": 100,
    },
    "Council": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "CouncilMembership": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "System": {
      "Account": [
        [
          [
            "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
          ],
          {
            "data": {
              "free": "100000000000000000000000",
            },
            "providers": 1,
          },
        ],
      ],
    },
    "TechnicalCommittee": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
    "TechnicalCommitteeMembership": {
      "Members": [
        "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
      ],
    },
  },
  "mock-signature-host": true,
  "port": 8000,
}
`;
